# salome_shape

./: .gitignore  CMakeLists.txt  check_dump.py  correction_auto_2.py  env_linux.sh
CMakeCommon/: FindPython.cmake  UnitTest.cmake  XMLProcessing.cmake
doc/gui/: new.txt  (+3 more)
src/: CTestTestfileInstall.cmake
src/ConnectorPlugin/: CMakeLists.txt  ConnectorPlugin_ExportFeature.py  ConnectorPlugin_PublishToStudy.py  ConnectorPlugin_PublishToStudyFeature.py  ShapeUtilities.py  plugin-Connector.xml
src/ExchangePlugin/: CMakeLists.txt  ExchangePlugin_Dump.cpp  ExchangePlugin_ExportFeature.cpp  ExchangePlugin_ExportFeature.h  ExchangePlugin_ExportRoot.cpp  ExchangePlugin_ExportRoot.h  ExchangePlugin_Import.cpp  ExchangePlugin_Import.h  ExchangePlugin_ImportFeature.cpp  ExchangePlugin_ImportFeature.h  ExchangePlugin_msg_en.ts  ExchangePlugin_msg_fr.ts  export_widget.xml  plugin-Exchange.xml
src/ExchangePlugin/Test/: TestExport.py  TestExportPart_Failure_1.py  TestExportPart_Failure_2.py  TestExportPart_Failure_3.py  TestExportPart_FullPartSet.py  TestExportPart_FullPart_1.py  TestExportPart_FullPart_2.py  TestExportPart_PartSet.py  TestExportPart_Results_1.py  TestExportPart_Results_2.py  TestExportPart_Results_3.py  TestExportPart_Results_4.py  TestExportPart_Results_5.py  TestExportPart_Results_6.py  TestExportPart_Results_7.py  TestExportPart_Results_8.py  TestExportToROOT.py  TestImport.py  TestImportImage_1.py  TestImportPart_AfterCurrent_1.py  TestImportPart_AfterCurrent_2.py  TestImportPart_AfterLast_1.py  TestImportPart_AfterLast_2.py  TestImportPart_AfterLast_3.py  TestImportPart_AfterLast_4.py  TestImportPart_AfterLast_5.py  TestImportPart_AfterLast_6.py  TestImportPart_Construction_1.py  TestImportPart_Construction_2.py  TestImportPart_Construction_3.py  TestImportPart_Construction_4.py  TestImportPart_Multiple.py  TestImportPart_ToEmptyPart.py  TestImportPart_ToEmptyPartSet.py  tests.set
src/ExchangePlugin/doc/: TUI_importFeature.rst  dumpFeature.rst  exportFeature.rst  importFeature.rst
src/ExchangePlugin/doc/examples/: exportSTL.py  importStep.py
src/Filters/: CMakeLists.txt  Filters.h  Filters_HorizontalPlane.cpp  Filters_HorizontalPlane.h  Filters_Plugin.cpp  Filters_Plugin.h  Filters_VerticalPlane.cpp  Filters_VerticalPlane.h
src/OperaAPI/: CMakeLists.txt  OperaAPI.h  OperaAPI.i  OperaAPI_AddNode.cpp  OperaAPI_AddNode.h  OperaAPI_Volume.cpp  OperaAPI_Volume.h  OperaAPI_addVolume.cpp  OperaAPI_addVolume.h  OperaAPI_swig.h
src/OperaPlugin/: CMakeLists.txt  OperaPlugin.h  OperaPlugin_AddNode.cpp  OperaPlugin_AddNode.h  OperaPlugin_Node.cpp  OperaPlugin_Node.h  OperaPlugin_Plugin.cpp  OperaPlugin_Plugin.h  OperaPlugin_Tools.cpp  OperaPlugin_Tools.h  OperaPlugin_Volume.cpp  OperaPlugin_Volume.h  OperaPlugin_msg_fr.ts  addnode_widget.xml  addvolume_widget.xml  node_widget.xml  plugin-Opera.xml  tests.set  volume_widget.xml
src/OperaPlugin/Test/: TestAddNode.py  TestAddVolume.py  TestVolume.py
src/OperaPlugin/doc/: OperaPlugin.rst  TUI_addnode.rst  TUI_volume.rst  addnodeFeature.rst  volumeFeature.rst
src/OperaPlugin/doc/examples/: addnode.py  volume.py
src/PythonAPI/: CMakeLists.txt  __init__.py  initConfig.py  tests.set
src/PythonAPI/Test/: TestCR.py  TestFeatures.py  TestFeaturesExtrusion.py  TestFeaturesRevolution.py  TestInsertParameter.py  TestMakeBrick1.py  TestMakeBrick2.py  TestMakeBrick3.py  TestModel.py  TestPlatine.py  TestPythonAPI.py  TestSketcher.py  TestSketcherAddArc.py  TestSketcherAddCircle.py  TestSketcherAddLine.py  TestSketcherAddMirror.py  TestSketcherAddPoint.py  TestSketcherSetAngle.py  TestSketcherSetCoincident.py  TestSketcherSetEqual.py  TestSketcherSetFillet.py  TestSketcherSetHorizontal.py  TestSketcherSetLength.py  TestSketcherSetParallel.py  TestSketcherSetPerpendicular.py  TestSketcherSetRadius.py  TestSketcherSetRigid.py  TestSketcherSetTangent.py  TestSketcherSetVertical.py  config.py.in
src/PythonAPI/examples/: MakeBrick1.py  MakeBrick2.py  MakeBrick3.py  Platine.py  __init__.py
src/PythonAPI/extension/: box.py
src/PythonAPI/geom/: CanonicalRecognition.py  __init__.py
src/PythonAPI/model/: __init__.py  roots.py  services.py
src/PythonAPI/model/connection/: connection.py
src/PythonAPI/model/construction/: axis.py  plane.py  point.py
src/PythonAPI/model/exchange/: __init__.py  exchange.py
src/PythonAPI/model/features/: __init__.py  boolean.py  extrusion.py  group.py  partition.py  placement.py  revolution.py  roots.py  rotation.py  translation.py
src/PythonAPI/model/opera/: __init__.py
src/PythonAPI/model/parameter/: __init__.py  import_parameter.py  parameter.py
src/PythonAPI/model/partset/: part.py
src/PythonAPI/model/primitives/: __init__.py
src/PythonAPI/model/sketcher/: arc.py  circle.py  entity.py  line.py  mirror.py  point.py  sketch.py
src/PythonAPI/model/tests/: tests.py
src/PythonAddons/: CMakeLists.txt  PythonAddons_msg_en.ts  PythonAddons_msg_fr.ts  addons_Features.py  addons_Features.xml.in  tests.set
src/PythonAddons/Test/: TestfibreNeutre.py  TestmidSurface.py  TestpipeNetwork.py  TestpipeNetwork_2par2.py  Testpiping.py
src/PythonAddons/doc/: PythonAddons.rst  addons_Features.rst  boxFeature.rst  fibreNeutre.rst  midSurface.rst  pipeNetworkFeature.rst  pipingFeature.rst  rectangleFeature.rst
src/PythonAddons/macros/box/: feature.py
src/PythonAddons/macros/compoundVertices/: feature.py  widget.xml
src/PythonAddons/macros/fibreNeutre/: feature.py  surfaceMediane.py  widget.xml
src/PythonAddons/macros/importParameters/: feature.py
src/PythonAddons/macros/midSurface/: feature.py  surfaceMediane.py
src/PythonAddons/macros/pipeNetwork/: feature.py  pipeNetwork_2par2.txt  pipeNetwork_a.txt  pipeNetwork_ligne.txt  piping.txt  widget.xml
src/PythonAddons/macros/piping/: feature.py  ligne_tuyau.txt  widget.xml
src/SAMPlugin/Test/: CMakeLists.txt  tests.set
src/ViewFilters/: CMakeLists.txt  ViewFilters.h  ViewFilters_HorizontalPlane.cpp  ViewFilters_HorizontalPlane.h  ViewFilters_Plugin.cpp  ViewFilters_Plugin.h  ViewFilters_VerticalPlane.cpp  ViewFilters_VerticalPlane.h
(+698 files in other folders)
